# redshirt

./: .travis.yml  Cargo.toml  LICENSE  README.md  arm-freestanding.json  arm-freestanding.ld  link.ld  riscv-hifive.json  riscv-hifive.ld  rust-toolchain  x86_64-multiboot2.json  x86_64-multiboot2.ld  x86_64-unknown-none.json
core/: Cargo.toml
core-proc-macros/: Cargo.toml
core-proc-macros/src/: lib.rs
core/benches/: keccak.rs  keccak.wasm
core/src/: core.rs  extrinsics.rs  id_pool.rs  interface.rs  lib.rs  module.rs  native.rs  predef.rs  primitives.rs  scheduler.rs  signature.rs  system.rs  wasm_value.rs
core/src/core/: builder.rs  global_ext.rs  pid.rs  process.rs
core/src/extrinsics/: log_calls.rs  wasi.rs
core/src/native/: collection.rs  traits.rs
core/src/predef/: cdn.rs
core/src/scheduler/: builder.rs  extrinsics.rs  global_ext.rs  ipc.rs  pid.rs  process.rs  processes.rs  tests.rs  vm.rs
core/src/system/: extrinsics_convert.rs  interfaces.rs  pending_answers.rs
hosted/cli/: Cargo.toml  build.rs
hosted/cli/src/: main.rs
hosted/kernel/: Cargo.toml  build.rs
hosted/kernel/src/: main.rs  tcp_interface.rs
hosted/tcp/: Cargo.toml
hosted/tcp/src/: lib.rs
hosted/wasi/: Cargo.toml
hosted/wasi/src/: lib.rs
interfaces/disk/: Cargo.toml
interfaces/disk/src/: disk.rs  ffi.rs  lib.rs
interfaces/framebuffer/: Cargo.toml
interfaces/framebuffer/src/: ffi.rs  lib.rs
interfaces/hardware/: Cargo.toml
interfaces/hardware/src/: ffi.rs  lib.rs  malloc.rs
interfaces/kernel-log/: Cargo.toml
interfaces/kernel-log/src/: ffi.rs  lib.rs
interfaces/loader/: Cargo.toml
interfaces/loader/src/: ffi.rs  lib.rs
interfaces/network/: Cargo.toml
interfaces/network/src/: ffi.rs  interface.rs  lib.rs  tcp.rs
interfaces/syscalls/: Cargo.toml
interfaces/syscalls/src/: block_on.rs  emit.rs  ffi.rs  interface_message.rs  lib.rs  response.rs  traits.rs
interfaces/tcp/: Cargo.toml
interfaces/tcp/src/: ffi.rs  lib.rs
interfaces/time/: Cargo.toml
interfaces/time/src/: delay.rs  ffi.rs  instant.rs  lib.rs
interfaces/video-output/: Cargo.toml
interfaces/video-output/src/: ffi.rs  lib.rs  video_output.rs
interfaces/vulkan/: Cargo.toml
interfaces/vulkan/src/: lib.rs
interfaces/webgpu/: Cargo.toml  log  regen_bindings.sh
interfaces/webgpu/src/: bindings.rs  ffi.rs  lib.rs  local_impl.rs  restricted.rs
interfaces/window/: Cargo.toml
interfaces/window/src/: ffi.rs  lib.rs
kernel/: Cargo.toml  build.rs
kernel-standalone-builder/: Cargo.toml  build.rs
kernel-standalone-builder/res/specs/: arm-freestanding.json  riscv-hifive.ld  x86_64-multiboot2.json
kernel-standalone-builder/simpleboot/: README.md  wrapper.c
kernel-standalone-builder/simpleboot/simpleboot/: .gitignore  Kconfig  Kconfig.name  LICENSE  Makefile  README.md  simpleboot.h
kernel-standalone-builder/src/: build.rs  emulator.rs  image.rs  simpleboot.rs  test.rs
kernel/cli/: Cargo.toml  build.rs
kernel/cli/src/: main.rs
kernel/core/: Cargo.toml
kernel/core-proc-macros/: Cargo.toml
kernel/core-proc-macros/src/: lib.rs
kernel/core/benches/: keccak.rs
kernel/core/src/: id_pool.rs  lib.rs  module.rs  primitives.rs  scheduler.rs  system.rs
kernel/gui/: Cargo.toml  build.rs
kernel/gui/src/: main.rs
kernel/hardware/: Cargo.toml
kernel/hardware/src/: arch.rs  lib.rs
kernel/hosted-framebuffer/: Cargo.toml
kernel/hosted-framebuffer/src/: framebuffer.rs  lib.rs
kernel/hosted-log/: Cargo.toml
kernel/hosted-log/src/: lib.rs
kernel/hosted-random/: Cargo.toml
kernel/hosted-random/src/: lib.rs
kernel/hosted-stdout/: Cargo.toml
kernel/hosted-stdout/src/: lib.rs
kernel/hosted-tap/: Cargo.toml
kernel/hosted-tap/src/: lib.rs  tap.rs
kernel/hosted-tcp/: Cargo.toml
kernel/hosted-tcp/src/: lib.rs
kernel/hosted-time/: Cargo.toml
kernel/hosted-time/src/: lib.rs
kernel/hosted-wasi/: Cargo.toml
kernel/hosted-wasi/src/: lib.rs
kernel/hosted-webgpu/: Cargo.toml
kernel/hosted-webgpu/src/: lib.rs
kernel/module-builder/: Cargo.toml
kernel/module-builder/src/: lib.rs
kernel/raspi-img-builder/: Cargo.toml
kernel/raspi-img-builder/src/: lib.rs
kernel/src/: main.rs  tcp_interface.rs  wasi.rs
kernel/standalone/: Cargo.toml  build.rs
kernel/standalone-builder/: Cargo.toml
kernel/standalone-builder/src/: binary.rs  build.rs  emulator.rs  image.rs  lib.rs  main.rs
kernel/standalone-tester/: Cargo.toml
kernel/standalone-tester/src/: main.rs
kernel/standalone/src/: arch.rs  boot.S  executor.rs  future_channel.rs  hardware.rs  kernel.rs  klog.rs  lib.rs  main.rs  mem_alloc.rs  panic.rs  pci.rs  random.rs  time.rs
kernel/x86-stdout/: Cargo.toml
kernel/x86-stdout/src/: lib.rs
modules/: Cargo.toml  doom.wasm
modules/.cargo/: config
modules/arm-log/: Cargo.toml
modules/arm-log/src/: main.rs
modules/arm-stdout/: Cargo.toml
modules/arm-stdout/src/: main.rs
modules/compositor/: Cargo.toml
modules/compositor/src/: lib.rs  main.rs  rect.rs
modules/desktop/: Cargo.toml
modules/desktop/src/: background.rs  launch_bar.rs  lib.rs  main.rs  pci_debug.rs  rasterizer.rs
modules/diagnostics-http-server/: Cargo.toml
modules/dummy-system-time/: Cargo.toml
modules/e1000/: Cargo.toml
modules/e1000/src/: device.rs  (+1 more)
modules/hello-triangle/: Cargo.toml
modules/hello-world/: Cargo.toml
modules/http-server/: Cargo.toml
modules/ipfs/: Cargo.toml
modules/kernel-debug-printer/: Cargo.toml
modules/log-to-kernel/: Cargo.toml
modules/ne2000/: Cargo.toml
modules/network-manager/: Cargo.toml
modules/p2p-loader/: Cargo.toml  Dockerfile
modules/pci-printer/: Cargo.toml  build.rs
modules/preloaded/: Cargo.toml
modules/rpi-framebuffer/: Cargo.toml
modules/stdlib/: Cargo.toml
modules/stub/: Cargo.toml
modules/syscalls/: Cargo.toml
modules/usb-controller-driver/: Cargo.toml
modules/vga-vbe/: Cargo.toml
modules/vulkan-triangle/: Cargo.toml
modules/wasm-timer/: Cargo.toml
modules/x86-log/: Cargo.toml
modules/x86-pci/: Cargo.toml  build.rs
modules/x86-stdout/: Cargo.toml
modules/x86-vga-vbe/: Cargo.toml
(+484 files in other folders)
