[workspace]
members = [
    "core",
    "core-proc-macros",
    "kernel/cli",
    "kernel/hosted-framebuffer",
    "kernel/hosted-log",
    "kernel/hosted-random",
    "kernel/hosted-tcp",
    "kernel/standalone",
    "interfaces/disk",
    "interfaces/ethernet",
    "interfaces/framebuffer",
    "interfaces/hardware",
    "interfaces/interface",
    "interfaces/kernel-debug",
    "interfaces/kernel-log",
    "interfaces/loader",
    "interfaces/log",
    "interfaces/pci",
    "interfaces/random",
    "interfaces/syscalls",
    "interfaces/system-time",
    "interfaces/tcp",
    "interfaces/time",
    "interfaces/video-output",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[patch.crates-io]
# TODO: waiting for the release of https://github.com/paritytech/parity-scale-codec/pull/199
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec" }
# TODO: needs a release of https://github.com/rust-osdev/x86_64/pull/218
x86_64 = { git = "https://github.com/tomaka/x86_64", rev = "a9c55de9d0b18e06c28330724d1c6425ff1012bf" }
