[workspace]
members = [
    "kernel/core",
    "kernel/core-proc-macros",
    "kernel/standalone",
    "interfaces/disk",
    "interfaces/ethernet",
    "interfaces/framebuffer",
    "interfaces/hardware",
    "interfaces/interface",
    "interfaces/kernel-debug",
    "interfaces/kernel-log",
    "interfaces/loader",
    "interfaces/log",
    "interfaces/pci",
    "interfaces/random",
    "interfaces/syscalls",
    "interfaces/system-time",
    "interfaces/tcp",
    "interfaces/time",
    "interfaces/video-output",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
