[workspace]
members = [
    "kernel/core",
    "kernel/core-proc-macros",
    "kernel/standalone",
    "interface-wrappers/disk",
    "interface-wrappers/ethernet",
    "interface-wrappers/framebuffer",
    "interface-wrappers/hardware",
    "interface-wrappers/interface",
    "interface-wrappers/kernel-debug",
    "interface-wrappers/kernel-log",
    "interface-wrappers/loader",
    "interface-wrappers/log",
    "interface-wrappers/pci",
    "interface-wrappers/random",
    "interface-wrappers/syscalls",
    "interface-wrappers/system-time",
    "interface-wrappers/tcp",
    "interface-wrappers/time",
    "interface-wrappers/video-output",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
