[package]
name = "redshirt-core-proc-macros"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
cargo_metadata = "0.9"
proc-macro2 = "1.0"
proc-macro-hack = "0.5.11"
serde_json = "1.0"
syn = "1.0"
wat = "1.0.6"

[features]
default = []
nightly = []
