[package]
name = "redshirt-core"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
blake3 = { version = "0.2.2", default-features = false }
bs58 = { version = "0.3.0", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
either = { version = "1.5.3", default-features = false }
fnv = { git = "https://github.com/dflemstr/rust-fnv", default-features = false }    # TODO: https://github.com/servo/rust-fnv/pull/22
futures = { version = "0.3.1", default-features = false }      # TODO: necessary?
hashbrown = { version = "0.7.1", default-features = false }
nohash-hasher = { version = "0.2.0", default-features = false }
proc-macro-hack = "0.5.11"
redshirt-core-proc-macros = { path = "../core-proc-macros" }
redshirt-interface-interface = { path = "../interfaces/interface", default-features = false }
redshirt-loader-interface = { path = "../interfaces/loader", default-features = false }
redshirt-log-interface = { path = "../interfaces/log", default-features = false }
redshirt-random-interface = { path = "../interfaces/random", default-features = false }
redshirt-syscalls = { path = "../interfaces/syscalls", default-features = false }
redshirt-system-time-interface = { path = "../interfaces/system-time", default-features = false }
redshirt-time-interface = { path = "../interfaces/time", default-features = false }
rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2.1", default-features = false }
rand_core = { version = "0.5.0", default-features = false }
rand_hc = { version = "0.2.0", default-features = false }
smallvec = { version = "1.0.0", default-features = false }
spin = "0.5.2"
wasi = { version = "0.9.0", default-features = false }
# TODO: https://github.com/paritytech/wasmi/issues/218
wasmi = { git = "https://github.com/tomaka/wasmi", branch = "no-std", default-features = false, features = ["core"] }

[features]
default = []
nightly = ["redshirt-core-proc-macros/nightly"]
