[package]
name = "redshirt-standalone-builder"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[workspace]

[dependencies]
fatfs = "0.3.5"
fscommon = "0.1.1"
futures = "0.3.19"
futures-timer = "3.0.2"
cargo_metadata = "0.12"
mbrman = "0.4.2"
serde_json = "1.0.68"
structopt = "0.3.25"
tempdir = "0.3.7"
thiserror = "1.0"
toml = "0.5.8"
walkdir = "2.3.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

