[package]
name = "kernel"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "kernel"

[dependencies]
kernel-core = { path = "../core" }
futures-preview = "0.3.0-alpha.18"
rand = "0.7"

# TODO: remove
wasmi = { git = "https://github.com/paritytech/wasmi", default-features = false, features = ["core"] }
