[package]
name = "kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "kernel"

[dependencies]
async-std = "0.99.5"
byteorder = { version = "1.3.2", default-features = false }
fnv = "1.0"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
kernel-core = { path = "../core" }
parity-scale-codec = "1.0.5"
rand = "0.7"
tcp = { path = "../interfaces/tcp" }
vulkan = { path = "../interfaces/vulkan" }
wasi = "0.7.0"

# TODO: remove
wasmi = { git = "https://github.com/paritytech/wasmi", default-features = false, features = ["core"] }

[build-dependencies]
walkdir = "2.2.9"
