[workspace]
members = [
    "hello-world",
    "http-server",
    "log-to-kernel",
    "ne2000",
    "p2p-loader",
    "pci-printer",
    "rpi-framebuffer",
    "stub",
    "third-party/time",
    "third-party/wasm-timer",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[patch.crates-io]
# TODO: waiting for the release of https://github.com/paritytech/parity-scale-codec/pull/199
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec" }
ring = { git = "https://github.com/nhynes/ring", branch = "wasi" }
time = { path = "./third-party/time" }
wasm-timer = { path = "./third-party/wasm-timer" }
