[workspace]
members = [
    "compositor",
    "desktop",
    "dummy-system-time",
    "e1000",
    "hello-world",
    "http-server",
    "network-manager",
    "log-to-kernel",
    "p2p-loader",
    "pci-printer",
    "rpi-framebuffer",
    "stub",
    "third-party/wasm-timer",
    "vga-vbe",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[patch.crates-io]
# TODO: waiting for the release of https://github.com/hyperium/hyper/pull/2253
hyper = { git = "https://github.com/hyperium/hyper", rev = "25a05894b97eca5b5e486cf2f4245e638464d318" }
# TODO: waiting for the release of https://github.com/paritytech/parity-scale-codec/pull/199
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec" }
ring = { git = "https://github.com/nhynes/ring", branch = "wasi" }
wasm-timer = { path = "./third-party/wasm-timer" }
