[workspace]
members = [
    "compositor",
    "dummy-system-time",
    "e1000",
    "hello-world",
    "http-server",
    "network-manager",
    "log-to-kernel",
    "p2p-loader",
    "pci-printer",
    "rpi-framebuffer",
    "stub",
    "third-party/wasm-timer",
    "vga-vbe",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[patch.crates-io]
ring = { git = "https://github.com/nhynes/ring", branch = "wasi" }
wasm-timer = { path = "./third-party/wasm-timer" }
