[package]
name = "nametbd-cli-kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-std = "1.0"
futures = "0.3.1"
nametbd-core = { path = "../../core" }
nametbd-tcp-hosted = { path = "../tcp" }
nametbd-tcp-interface = { path = "../../interfaces/tcp" }
nametbd-time-hosted = { path = "../time" }
nametbd-time-interface = { path = "../../interfaces/time" }
nametbd-wasi-hosted = { path = "../wasi" }
parity-scale-codec = "1.0.5"
wasi = "0.7.0"

[build-dependencies]
walkdir = "2.2.9"
