[package]
name = "kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "kernel"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
hosted-tcp = { path = "../tcp" }
hosted-wasi = { path = "../wasi" }
kernel-core = { path = "../../core" }
parity-scale-codec = "1.0.5"
tcp = { path = "../../interfaces/tcp" }
vulkan = { path = "../../interfaces/vulkan" }
wasi = "0.7.0"
window = { path = "../../interfaces/window" }
winit = "0.20.0-alpha3"

[build-dependencies]
walkdir = "2.2.9"
