[package]
name = "nametbd-gui-kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "nametbd-gui-kernel"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
nametbd-core = { path = "../../core" }
nametbd-tcp-hosted = { path = "../tcp" }
nametbd-tcp-interface = { path = "../../interfaces/tcp" }
nametbd-vulkan-interface = { path = "../../interfaces/vulkan" }
nametbd-wasi-hosted = { path = "../wasi" }
nametbd-window-interface = { path = "../../interfaces/window" }
parity-scale-codec = "1.0.5"
wasi = "0.7.0"
winit = "0.20.0-alpha3"

[build-dependencies]
walkdir = "2.2.9"
