[package]
name = "nametbd-tcp-hosted"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-std = "0.99.5"
fnv = "1.0"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
nametbd-tcp-interface = { path = "../../interfaces/tcp" }
