[package]
name = "nametbd-wasi-hosted"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
nametbd-core = { path = "../../core" }
rand = "0.7"

# TODO: remove
wasmi = { git = "https://github.com/paritytech/wasmi", default-features = false, features = ["core"] }
