[package]
name = "redshirt-framebuffer-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
parity-scale-codec = { version = "3.1.5", features = ["derive"] }
redshirt-random-interface = { path = "../random", default-features = false }
redshirt-syscalls = { path = "../syscalls", default-features = false }
