[package]
name = "redshirt-hardware-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.13", default-features = false }
redshirt-syscalls = { path = "../syscalls", default-features = false }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = []
