[package]
name = "redshirt-kernel-log-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
redshirt-syscalls = { path = "../syscalls", default-features = false }
