[package]
name = "redshirt-syscalls"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
futures = { version = "0.3.1", default-features = false, features = ["alloc"] }
generic-array = { version = "0.13.2", default-features = false }
hashbrown = { version = "0.6.0", default-features = false, features = ["ahash"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
parity-scale-codec = { version = "1.0.5", default-features = false, features = ["derive"] }
pin-project = "0.4.6"
spin = "0.5.2"
