[package]
name = "redshirt-syscalls"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.1", default-features = false, features = ["alloc"] }
generic-array = { version = "0.13.2", default-features = false }
hashbrown = { version = "0.9.0", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
nohash-hasher = { version = "0.2.0", default-features = false }
parity-scale-codec = { version = "1.3.0", default-features = false, features = ["derive"] }
pin-project = "0.4.6"
slab = { git = "https://github.com/baloo/slab", rev = "88b456131de20750e785655d1e62cd0b6e10d44b" }
spinning_top = "0.1.0"
