[package]
name = "redshirt-syscalls"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.13", default-features = false, features = ["alloc"] }
generic-array = { version = "0.14.4", default-features = false }
hashbrown = { version = "0.13.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
nohash-hasher = { version = "0.2.0", default-features = false }
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
pin-project = "1.0.5"
slab = { git = "https://github.com/tokio-rs/slab", default-features = false, rev = "3340fdcf7204584b9ee509beabf3b174a333dfc1" }
spinning_top = "0.2.2"
