[package]
name = "redshirt-tcp-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.11"
futures = "0.3.13"
redshirt-syscalls = { path = "../syscalls" }
parity-scale-codec = { version = "3.1.5", features = ["derive"] }
tokio = { version = "1.2.0", default-features = false }
