[package]
name = "redshirt-time-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
redshirt-syscalls-interface = { path = "../syscalls", default-features = false }
parity-scale-codec = { version = "1.0.5", default-features = false, features = ["derive"] }
pin-project = "0.4.6"

[features]
default = ["std"]
std = []
