[package]
name = "redshirt-video-output-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
redshirt-random-interface = { path = "../random" }
redshirt-syscalls = { path = "../syscalls" }
parity-scale-codec = { version = "1.3.5", features = ["derive"] }
