[package]
name = "redshirt-vulkan-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
build = "build/main.rs"

[dependencies]
hashbrown = "0.6.0"
redshirt-syscalls-interface = { path = "../syscalls" }
parity-scale-codec = "1.0.5"

[build-dependencies]
xml-rs = "0.8.0"
