[package]
name = "redshirt-webgpu-interface"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
build = "build/main.rs"

[dependencies]
redshirt-syscalls-interface = { path = "../syscalls", default-features = false }
parity-scale-codec = { version = "1.0.5", default-features = false, features = ["derive", "full"] }

[build-dependencies]
case = "1.0.0"
regex = "1.3.1"
webidl = "0.9.0"
