[package]
name = "redshirt-cli-kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "redshirt-cli-kernel"

[dependencies]
async-std = "1.3"
futures = "0.3.1"
parking_lot = "0.10.0"
redshirt-core = { path = "../../core" }
redshirt-log-hosted = { path = "../hosted-log" }
redshirt-random-hosted = { path = "../hosted-random" }
redshirt-syscalls = { path = "../../interfaces/syscalls" }
redshirt-tcp-hosted = { path = "../hosted-tcp" }
redshirt-time-hosted = { path = "../hosted-time" }
redshirt-webgpu-hosted = { path = "../hosted-webgpu" }
parity-scale-codec = "1.0.5"
structopt = "0.3.5"
wasi = "0.9.0+wasi-snapshot-preview1"
winit = "0.20.0"

[build-dependencies]
walkdir = "2.2.9"
