[package]
name = "redshirt-cli-kernel"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false
default-run = "redshirt-cli-kernel"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3.12"
num_cpus = "1.13.0"
rand = "0.8.1"
redshirt-core = { path = "../../core", features = ["nightly"] }
redshirt-framebuffer-hosted = { path = "../hosted-framebuffer" }
redshirt-log-hosted = { path = "../hosted-log" }
redshirt-random-hosted = { path = "../hosted-random" }
redshirt-syscalls = { path = "../../interfaces/syscalls" }
redshirt-tcp-hosted = { path = "../hosted-tcp" }
parity-scale-codec = "1.3.6"
structopt = "0.3.21"
wasi = { git = "https://github.com/bytecodealliance/wasi", rev = "45536ac956a6211e3cff047f36cf19d6da82fd95" } # TODO: dependabot cannot parse the versioning scheme (`0.10.0+wasi-snapshot-preview1`) of this crate on crates.io

[build-dependencies]
walkdir = "2.2.9"
