[package]
name = "redshirt-core-proc-macros"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
cargo_metadata = "0.15"
proc-macro2 = "1.0"
serde_json = "1.0"
syn = "1.0"
wat = "1.0.36"

[features]
default = []
nightly = []
