[package]
name = "redshirt-core"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []
nightly = ["redshirt-core-proc-macros/nightly"]

[dependencies]
atomic = "0.5.0"
blake3 = { version = "0.3.7", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
either = { version = "1.6.1", default-features = false }
fnv = { version = "1.0.7", default-features = false }
futures = { version = "0.3.13", default-features = false }
hashbrown = { version = "0.9.1", default-features = false }
nohash-hasher = { version = "0.2.0", default-features = false }
redshirt-core-proc-macros = { path = "../core-proc-macros" }
redshirt-interface-interface = { path = "../../interfaces/interface", default-features = false }
redshirt-kernel-debug-interface = { path = "../../interfaces/kernel-debug", default-features = false }
redshirt-loader-interface = { path = "../../interfaces/loader", default-features = false }
redshirt-log-interface = { path = "../../interfaces/log", default-features = false }
redshirt-random-interface = { path = "../../interfaces/random", default-features = false }
redshirt-syscalls = { path = "../../interfaces/syscalls", default-features = false }
redshirt-system-time-interface = { path = "../../interfaces/system-time", default-features = false }
redshirt-time-interface = { path = "../../interfaces/time", default-features = false }
rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.2", default-features = false }
slab = { git = "https://github.com/tokio-rs/slab", default-features = false, rev = "3340fdcf7204584b9ee509beabf3b174a333dfc1" }
smallvec = { version = "1.6.1", default-features = false }
spinning_top = "0.2.2"
wasi = { git = "https://github.com/bytecodealliance/wasi", rev = "45536ac956a6211e3cff047f36cf19d6da82fd95", default-features = false }# TODO: dependabot cannot parse the versioning scheme (`0.10.0+wasi-snapshot-preview1`) of this crate on crates.io
wasmi = { version = "0.8.0", default-features = false, features = ["core"] }

[dev-dependencies]
criterion = "0.3"
futures = { version = "0.3.13", default-features = false, features = ["executor"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[[bench]]
name = "keccak"
harness = false
