[package]
name = "nametbd-hardware"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
# TODO: https://github.com/rust-lang/futures-rs/pull/2007
futures = { git = "https://github.com/tomaka/futures-rs", branch = "const-new-atomic-waker", default-features = false }
nametbd-hardware-interface = { path = "../../interfaces/hardware", default-features = false }
parity-scale-codec = { version = "1.0.5", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.8.1"
