[package]
name = "redshirt-framebuffer-hosted"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.3.0"
glium = "0.26.0"
parking_lot = "0.11.0"
redshirt-core = { path = "../../core" }
redshirt-framebuffer-interface = { path = "../../interfaces/framebuffer" }
redshirt-interface-interface = { path = "../../interfaces/interface" }
