[package]
name = "redshirt-log-hosted"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.13"
futures = "0.3.0"
redshirt-core = { path = "../../core" }
redshirt-interface-interface = { path = "../../interfaces/interface" }
redshirt-log-interface = { path = "../../interfaces/log" }
